--- a/Hipotezy.Rmd
+++ b/Hipotezy.Rmd
@@ -1,7 +1,9 @@
 ---
-title: "Raport"
-output: html_document
-editor_options: 
+title: "Badanie statystyczne wpływu różnych czynników na poziom samopoczucia"
+output:
+  pdf_document: default
+  html_document: default
+editor_options:
   chunk_output_type: console
 ---
 
@@ -19,15 +21,21 @@ library(tidyverse)
 library(lmtest)
 library(ggplot2)
 library(ggcorrplot)
+
+colf <- colorRampPalette(c("white","royalblue"))
 ```
 
+#Wstęp
+Celem naszego projektu jest analiza statystyczna wpływu różnych czynników na poziom samopoczucia.
+
+#Opis danych
+(Import, obróbka, wstępna analiza, testy na normalność)
 
 ```{r}
 load("dane.RData")
 ```
 
-
-## Hipotezy statystyczne
+#Hipotezy badawcze oraz ich weryfikacja
 
 $H_0:$ nie istnieje zależność pomiędzy zmiennymi.
 
@@ -35,7 +43,7 @@ $H_1:$ istnieje zależność pomiędzy zmiennymi.
 
 Hipotezy badane są na poziomie istotności $\alpha = 0.05$.
 
-### Hipoteza I
+## Hipoteza I
 
 Badanie, czy istnieje zależność pomiędzy poczuciem upokorzenia a jakością snu.
 
@@ -50,48 +58,35 @@ P-value dla testu `rho-Spearmana` wynosi `r sprintf("%.10f", r1)`, natomiast dla
 
 ### Wykresy boxplot
 ```{r}
-#wydaje mi się, że te boxploty nic tak naprawdę nie mówią i są nieczytelne
-#par(mfrow=c(1,2))
-#boxplot(as.numeric(dane$upokorzenie), main = "Poczucie upokorzenia",ylab = "poziomy"))
-#boxplot(as.numeric(dane$jakosc_snu), main = "Jakość snu", ylab = "poziomy")
-#par(mfrow=c(1,1))
+par(mfrow=c(1,2))
+boxplot(as.numeric(dane$upokorzenie), main = "Poczucie upokorzenia",ylab = "poziomy")
+boxplot(as.numeric(dane$jakosc_snu), main = "Jakość snu", ylab = "poziomy")
+par(mfrow=c(1,1))
 ```
 
 ### Wykresy słupkowe
 ```{r}
 par(mar=c(5.1, 4.1, 4.1, 5.2), xpd=TRUE)
-tab <- table(dane$upokorzenie, dane$jakosc_snu) 
+tab <- table(dane$upokorzenie, dane$jakosc_snu)
 tab #Tabela kontyngencji
-barplot(tab,
-        main = "Oddczuwanie upokorzenia w zależności od jakości snu",
-        xlab="Jakość snu",
-        ylab="Rozkład poczucia upokorzenia",
-        col = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred", "maroon1", "seashell1"),
-        names.arg = c("bardzo zła", "kiepska", "przeciętna", "dobra", "bardzo dobra"))
-legend("topright",
-       inset=c(-0.2,0),
-       title = "Częstość",
-       legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
-       fill = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred", "maroon1", "seashell1"),
-       cex=0.9)
 ttab <- prop.table(tab, margin = 2)*100
 ttab # w procentach
 barplot(ttab,
         main = "Odczuwanie upokorzenia w zależności od jakości snu",
         xlab="Jakość snu",
         ylab="Procentowy rozkład poczucia upokorzenia",
-        col = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred", "maroon1", "seashell1"),
+        col=colf(7),
         names.arg = c("bardzo zła", "kiepska", "przeciętna", "dobra", "bardzo dobra"))
 legend("topright",
        inset=c(-0.2,0),
        title = "Częstość",
        legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
-       fill = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred", "maroon1", "seashell1"),
+       fill = colf(7),
        cex=0.9)
 ```
 
 
-### Hipoteza II
+## Hipoteza II
 
 Badanie, czy istnieje zależność pomiędzy dietą a poczuciem radości.
 
@@ -105,49 +100,35 @@ r4 <- cor.test(x = as.numeric(dane$dieta), y = as.numeric(dane$radosc),
 P-value dla testu `rho-Spearmana` wynosi `r sprintf("%.10f", r3)`, natomiast dla testu `tau-Kendalla` wynosi `r sprintf("%.10f", r4)`. Nie ma podstaw do odrzucenia $H_0$. Nie istnieje istotna zależność pomiędzy dietą a poczuciem radości.
 
 ### Wykresy boxplot
-
 ```{r}
-#par(mfrow=c(1,2))
-#boxplot(as.numeric(dane$dieta), main = "Dieta",ylab = "poziomy")
-#boxplot(as.numeric(dane$radosc), main = "Poczucie radości", ylab = "poziomy")
-#par(mfrow=c(1,1))
+par(mfrow=c(1,2))
+boxplot(as.numeric(dane$dieta), main = "Dieta",ylab = "poziomy")
+boxplot(as.numeric(dane$radosc), main = "Poczucie radości", ylab = "poziomy")
+par(mfrow=c(1,1))
 ```
 
 ### Wykresy słupkowe
-
 ```{r}
 par(mar=c(5.1, 4.1, 4.1, 5.2), xpd=TRUE)
 tab <- table(dane$radosc, dane$dieta) 
 tab #Tabela kontyngencji
-barplot(tab,
-        main = "Odczuwanie radości, w zależności od rodzaju diety",
-        xlab="Rodzaj diety",
-        ylab="Rozkład poczucia radości",
-        col=c("lightyellow3", "antiquewhite1", "cyan3", "chartreuse", "darkorange1", "firebrick1", "darkorchid3"), 
-        names.arg = c("fast food", "przetworzona", "mięso", "wegetariańska", "zbilans."))
-legend("topright",
-       inset=c(-0.2,0),
-       title = "Częstość",
-       legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
-       fill = c("lightyellow3", "antiquewhite1", "cyan3", "chartreuse", "darkorange1", "firebrick1", "darkorchid3"),
-       cex=0.9)
 ttab <- prop.table(tab, margin = 2)*100
 ttab # w procentach
 barplot(ttab,
         main = "Odczuwanie radości, w zależności od rodzaju diety",
         xlab="Rodzaj diety",
         ylab="Procentowy rozkład poczucia radości",
-        col=c("lightyellow3", "antiquewhite1", "cyan3", "chartreuse", "darkorange1", "firebrick1", "darkorchid3"),
+        col=colf(7),
         names.arg = c("fast food", "przetworzona", "mięso","wegetariańska", "zbilans."))
 legend("topright",
        inset=c(-0.2,0),
        title = "Częstość",
        legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
-       fill = c("lightyellow3", "antiquewhite1", "cyan3", "chartreuse", "darkorange1", "firebrick1", "darkorchid3"),
+       fill = colf(7),
        cex=0.9)
 ```
 
-### Hipoteza III
+## Hipoteza III
 
 Badanie, czy istnieje zależność pomiędzy liczbą bliskich znajomych a odczuwaniem niepokoju.
 
@@ -163,36 +144,23 @@ r6 <- cor.test(x = as.numeric(dane$liczba_osob_kontakty),
 P-value dla testu `rho-Spearmana` wynosi `r sprintf("%.10f", r5)`, natomiast dla testu `tau-Kendalla` wynosi `r sprintf("%.10f", r6)`. Należy odrzucić hipotezę $H_0$, na rzecz hipotezy alternatywnej $H_1$. Istnieje zależność pomiędzy liczbą osób, z którymi utrzymuje się regularny kontakt a odczuwaniem niepokoju.
 
 ### Wykresy słupkowe
-
 ```{r}
 par(mar=c(5.1, 4.1, 4.1, 5.2), xpd=TRUE)
 tab <- table(dane$niepokoj, dane$liczba_osob_kontakty) 
 tab #Tabela kontyngencji
-barplot(tab,
-        main = "Odczuwanie niepokoju, w zależności od liczby bliskich znajomych",
-        xlab="Liczba osób, z którymi utrzymuje się regularny kontakt",
-        ylab="Rozkład poczucia niepokoju",
-        col=c("lightyellow3", "antiquewhite1", "cyan3", "chartreuse", "darkorange1", "firebrick1", "darkorchid3"),
-        names.arg = c("0", "1", "2-3", "4-5", "więcej niż 5"))
-legend("topright",
-       inset=c(-0.2,0),
-       title = "Częstość",
-       legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
-       fill = c("lightyellow3", "antiquewhite1", "cyan3", "chartreuse", "darkorange1", "firebrick1", "darkorchid3"),
-       cex=0.9)
 ttab <- prop.table(tab, margin = 2)*100
 ttab # w procentach
 barplot(ttab,
         main = "Odczuwanie niepokoju, w zależności od liczby bliskich znajomych",
         xlab="Liczba osób, z którymi utrzymuje się regularny kontakt",
         ylab="Procentowy rozkład poczucia radości",
-        col=c("lightyellow3", "antiquewhite1", "cyan3", "chartreuse", "darkorange1", "firebrick1", "darkorchid3"),
+        col=colf(7),
         names.arg = c("0", "1", "2-3","4-5", "więcej niż 5"))
 legend("topright",
        inset=c(-0.2,0),
        title = "Częstość",
        legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
-       fill = c("lightyellow3", "antiquewhite1", "cyan3", "chartreuse", "darkorange1", "firebrick1", "darkorchid3"),
+       fill = colf(7),
        cex=0.9)
 ```
 
@@ -207,7 +175,7 @@ wsp_kor6 <- cor.test(x = as.numeric(dane$liczba_osob_kontakty),
 
 Współczynniki korelacji dla testów `rho-Spearmana` i `tau-Kendalla` wynoszą odpowiednio `r wsp_kor5` oraz `r wsp_kor6`. Interpretując te współczynniki oraz dane z wykresów, można stwierdzić, że wraz ze wzrostem liczby osób, z którymi utrzymuje się regularny kontakt, spada częstość odczuwania niepokoju.
 
-### Hipoteza IV
+## Hipoteza IV
 
 Badanie, czy istnieje zależność pomiędzy liczbą godzin przeznaczonych na korzystanie z urządzeń elektronicznych a poczuciem uzależnienia od urządzeń.
 
@@ -223,36 +191,23 @@ r8 <- cor.test(x = as.numeric(dane$godziny_rozrywki_urzadzenia),
 P-value dla testu `rho-Spearmana` wynosi `r sprintf("%.10f", r7)`, natomiast dla testu `tau-Kendalla` wynosi `r sprintf("%.10f", r8)`. Należy odrzucić hipotezę $H_0$, na rzecz hipotezy alternatywnej $H_1$. Istnieje zależność pomiędzy liczbą godzin spędzonych na używaniu urządzeń elektronicznych a poczuciem uzależnienia od nich.
 
 ### Wykresy słupkowe
-
 ```{r}
 par(mar=c(5.1, 4.1, 4.1, 5.2), xpd=TRUE)
 tab <- table(dane$poczucie_uzaleznienia_urzadzenia, dane$godziny_rozrywki_urzadzenia) 
 tab #Tabela kontyngencji
-barplot(tab,
-        main = "Wykres zależności",
-        xlab="Liczba godzin spędzonych na komputerze w celach rozrywkowych",
-        ylab="Rozkład poczucia uzależnienia od urządzeń",
-        col=c("lightyellow3", "antiquewhite1", "cyan3", "chartreuse", "darkorange1", "firebrick1", "darkorchid3"),
-        names.arg = c("mniej niż 1", "1-2", "2-3", "3-4", "więcej niż 4"))
-legend("topright",
-       inset=c(-0.2,0),
-       title = "Częstość",
-       legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
-       fill = c("lightyellow3", "antiquewhite1", "cyan3", "chartreuse", "darkorange1", "firebrick1", "darkorchid3"),
-       cex=0.9)
 ttab <- prop.table(tab, margin = 2)*100
 ttab # w procentach
 barplot(ttab,
         main = "Wykres zależności",
         xlab="Liczba godzin spędzonych na komputerze w celach rozrywkowych",
         ylab="Procentowy rozkład poczucia uzależnienia od urządzeń",
-        col=c("lightyellow3", "antiquewhite1", "cyan3", "chartreuse", "darkorange1", "firebrick1", "darkorchid3"),
+        col=colf(7),
         names.arg = c("mniej niż 1", "1-2", "2-3","3-4", "więcej niż 4"))
 legend("topright",
        inset=c(-0.2,0),
        title = "Poczucie uzależnienia",
        legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
-       fill = c("lightyellow3", "antiquewhite1", "cyan3", "chartreuse", "darkorange1", "firebrick1", "darkorchid3"),
+       fill = colf(7),
        cex=0.75)
 ```
 
@@ -267,7 +222,7 @@ wsp_kor8 <- cor.test(x = as.numeric(dane$godziny_rozrywki_urzadzenia),
 
 Współczynniki korelacji dla testów `rho-Spearmana` i `tau-Kendalla` wynoszą odpowiednio `r wsp_kor7` oraz `r wsp_kor8`. Wniosek: wraz ze wzrostem liczby godzin, spędzonych na korzystaniu dla rozrywki z urządzeń elektronicznych, wzrasta znacznie poczucie uzależnienia od tych urządzeń.
 
-### Hipoteza V
+## Hipoteza V
 
 Badanie, czy istnieje zależność pomiędzy posiadaniem wyznaczonych pór snu a jego jakością.
 
@@ -283,34 +238,22 @@ r10 <- cor.test(x = as.numeric(dane$wyzn_pory_snu),
 P-value dla testu `rho-Spearmana` wynosi `r sprintf("%.10f", r9)`, natomiast dla testu `tau-Kendalla` wynosi `r sprintf("%.10f", r10)`. Należy odrzucić hipotezę $H_0$, na rzecz hipotezy alternatywnej $H_1$. Istnieje zależność pomiędzy posiadaniem wyznaczonych pór snu a jego jakością.
 
 ### Wykresy słupkowe
-
 ```{r}
 par(mar=c(5.1, 4.1, 4.1, 5.2), xpd=TRUE)
 tab <- table(dane$jakosc_snu, dane$wyzn_pory_snu) 
 tab #Tabela kontyngencji
-barplot(tab,
-        main="Czy masz wyznaczone pory snu?",
-        ylab="Rozkład jakości snu",
-        col = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred", "maroon1", "seashell1"),
-        names.arg = c("nie", "raczej nie", "czasami", "raczej tak", "tak"))
-legend("topright",
-       inset=c(-0.2,0),
-       title = "Jakość snu",
-       legend = c("b.zła", "kiepska", "przeciętna", "dobra", "b.dobra"),
-       fill = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred", "maroon1", "seashell1"),
-       cex=0.8)
 ttab <- prop.table(tab, margin = 2)*100
 ttab # w procentach
 barplot(ttab,
         main = "Czy masz wyznaczone pory snu?",
         ylab="Rozkład procentowy jakości snu",
-        col = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred", "maroon1", "seashell1"),
+        col = colf(5),
         names.arg = c("nie", "raczej nie", "czasami", "raczej tak", "tak"))
 legend("topright",
        inset=c(-0.2,0),
        title = "Jakość snu",
        legend = c("b.zła", "kiepska", "przeciętna", "dobra", "b.dobra"),
-       fill = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred", "maroon1", "seashell1"),
+       fill = colf(5),
        cex=0.8)
 ```
 
@@ -325,7 +268,7 @@ wsp_kor10 <- cor.test(x = as.numeric(dane$wyzn_pory_snu),
 
 Współczynniki korelacji dla testów `rho-Spearmana` i `tau-Kendalla` są dość duże i wynoszą odpowiednio `r wsp_kor9` oraz `r wsp_kor10`. Im bardziej regularne są pory snu, tym lepsza jest jego jakość.
 
-### Hipoteza VI
+## Hipoteza VI
 
 Badanie, czy istnieje zależność pomiędzy liczbą godzin przeznaczonych na uprawianie sportu a odczuwaniem załamania.
 
@@ -341,36 +284,23 @@ r12 <- cor.test(x = as.numeric(dane$godziny_sportu),
 P-value dla testu `rho-Spearmana` wynosi `r sprintf("%.10f", r11)`, natomiast dla testu `tau-Kendalla` wynosi `r sprintf("%.10f", r12)`. Należy odrzucić hipotezę $H_0$, na rzecz hipotezy alternatywnej $H_1$. Istnieje zależność pomiędzy liczbą godzin przeznaczonych na uprawianie sportu a odczuwaniem załamania.
 
 ### Wykresy słupkowe
-
 ```{r}
 par(mar=c(5.1, 4.1, 4.1, 5.2), xpd=TRUE)
 tab <- table(dane$zalamanie, dane$godziny_sportu) 
 tab #Tabela kontyngencji
-barplot(tab,
-        main="Wykres zależności",
-        xlab="Liczba godzin w tygodniu przeznaczonych na sport",
-        ylab="Rozkład poczucia załamania",
-        col = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred", "maroon1", "seashell1"),
-        names.arg = c("0", "mniej niż 1", "1-2,5", "2,5-4", "więcej niż 4"))
-legend("topright",
-       inset=c(-0.2,0),
-       title = "Załamanie",
-       legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
-       fill = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred", "maroon1", "seashell1"),
-       cex=0.8)
 ttab <- prop.table(tab, margin = 2)*100
 ttab # w procentach
 barplot(ttab,
         main = "Wykres zależności",
         xlab="Liczba godzin w tygodniu przeznaczonych na sport",
         ylab="Rozkład procentowy poczucia załamania",
-        col = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred", "maroon1", "seashell1"),
+        col = colf(7),
         names.arg = c("0", "mniej niż 1", "1-2,5", "2,5-4", "więcej niż 4"))
 legend("topright",
        inset=c(-0.2,0),
        title = "Załamanie",
        legend = c("nigdy", "b.rzadko", "rzadko", "czasami", "często", "b.często", "zawsze"),
-       fill = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred", "maroon1", "seashell1"),
+       fill = colf(7),
        cex=0.8)
 ```
 
@@ -385,7 +315,7 @@ wsp_kor12 <- cor.test(x = as.numeric(dane$godziny_sportu),
 
 Współczynniki korelacji dla testów `rho-Spearmana` i `tau-Kendalla` wynoszą odpowiednio `r wsp_kor11` oraz `r wsp_kor12`. Im więcej godzin poświęca się tygodniowo na sport, tym rzadziej odczuwa się załamanie.
 
-### Hipoteza VII
+## Hipoteza VII
 
 Badanie, czy istnieje zależność pomiędzy jakością posiłków a dobrym humorem.
 
@@ -401,34 +331,22 @@ r14 <- cor.test(x = as.numeric(dane$jakosc_posilkow),
 P-value dla testu `rho-Spearmana` wynosi `r sprintf("%.10f", r13)`, natomiast dla testu `tau-Kendalla` wynosi `r sprintf("%.10f", r14)`. Należy odrzucić hipotezę $H_0$, na rzecz hipotezy alternatywnej $H_1$. Istnieje zależność pomiędzy jakością posiłków a dobrym humorem.
 
 ### Wykresy słupkowe
-
 ```{r}
 par(mar=c(5.1, 4.1, 4.1, 5.2), xpd=TRUE)
 tab <- table(dane$dobry_humor, dane$jakosc_posilkow) 
 tab #Tabela kontyngencji
-barplot(tab,
-        main="Jak dużą uwagę przykładasz do jakości swoich posiłków?",
-        ylab="Rozkład aktualnego humoru",
-        col = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred"),
-        names.arg = c("żadną", "małą", "średnią", "dużą", "bardzo dużą"))
-legend("topright",
-       inset=c(-0.2,0),
-       title = "Humor",
-       legend = c("zły", "kiepski", "średni", "dobry", "b.dobry"),
-       fill = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred"),
-       cex=0.95)
 ttab <- prop.table(tab, margin = 2)*100
 ttab # w procentach
 barplot(ttab,
         main = "Jak dużą uwagę przykładasz do jakości swoich posiłków?",
         ylab="Rozkład procentowy aktualnego humoru",
-        col = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred"),
+        col = colf(5),
         names.arg = c("żadną", "małą", "średnią", "dużą", "bardzo dużą"))
 legend("topright",
        inset=c(-0.2,0),
        title = "Humor",
        legend = c("zły", "kiepski", "średni", "dobry", "b.dobry"),
-       fill = c("yellow", "limegreen", "royalblue3", "purple", "mediumvioletred"),
+       fill = colf(5),
        cex=0.95)
 #nie wiem czy ten opis faktycznie jest poprawny
 ```
@@ -443,3 +361,6 @@ wsp_kor14 <- cor.test(x = as.numeric(dane$jakosc_posilkow),
 ```
 
 Zarówno współczynniki korelacji dla testów `rho-Spearmana` i `tau-Kendalla` wynoszące odpowiednio `r wsp_kor13` oraz `r wsp_kor14`, jak i wykresy słupkowe jasno wskazują na istotną zależność pomiędzy badanymi zmiennymi. Im większe znaczenie ma jakość spożywanych posiłków, tym lepszy humor się odczuwa.
+
+##Wnioski
+##Bibliografia
